kubernetes/apps/obot/obot/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: obot-ui
spec:
  hostnames:
    - "obot.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: obot-obot
          port: 80
